--- a/Styles/C0.Common.css
+++ b/Styles/C0.Common.css
@@ -42,3 +42,27 @@
 .style_green{font-family: "Times New Roman", Times, serif; font-size: 16px; font-style: bold; color: #44AA44; cursor:default}
 
 
+.marchingants {
+	background:url("../Images/C0.Common/MarchingAnts/ants-vertical.gif") repeat-y -6px 0;
+	overflow:hidden;
+	padding:0 2px;
+	position:relative;
+}
+	.marchingants .inner {
+		background:url("../Images/C0.Common/MarchingAnts/ants-horizontal.gif") repeat-x 0 -6px;
+		padding:2px 0 0 0;
+	}
+	.marchingants .hd {
+		background:url("../Images/C0.Common/MarchingAnts/ants-vertical.gif") repeat-y 0 0;
+		height:100%;
+		margin-bottom:4px;
+		position:absolute;
+		right:0;
+		width:2px;
+	}
+	.marchingants .ft {
+		background:url("../Images/C0.Common/MarchingAnts/ants-horizontal.gif") repeat-x 0 0;
+		height:2px;
+	}
+
+
